LITwillio/objects/SMS__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field store account for which SMS is sent</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SMSes</relationshipLabel>
        <relationshipName>SMSes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extended_Status__c</fullName>
        <description>This store detailed message about SMS status</description>
        <label>Extended Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message_Content__c</fullName>
        <description>This stores body of sent SMS</description>
        <label>Message Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sent_To_Number__c</fullName>
        <description>This stores phone number to which SMS is sent</description>
        <label>Sent To Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sent_To__c</fullName>
        <label>Sent To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This will store SMS status returned by Twilio</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SMS</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>SMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMSes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>